# pybind_ex

./: CMakeLists.txt
.github/workflows/: wheels.yml
src/: binder.cpp  mymath.cpp
